# document-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/sample_pdfs/: sample_invoice_001.txt  sample_invoice_002.txt  sample_letter_001.txt  sample_report_001.txt  sample_resume_001.txt
docs/: architecture.md  architecture.mmd  research_report.md
src/: __init__.py  batch_pipeline.py  classifier.py  cli.py  entity_extractor.py  extractor.py  output_formatter.py  similarity.py
tests/: __init__.py  test_classifier.py  test_entity_extractor.py  test_extractor.py  test_similarity.py
